--- a/_posts/2023-07-14-newPost.md
+++ b/_posts/2023-07-14-newPost.md
@@ -1,6 +1,6 @@
 ---
 title: TITLE
-date: YYYY-MM-DD HH:MM:SS +/-TTTT
+date: 2023-07-14 #HH:MM:SS +/-TTTT
 categories: [TOP_CATEGORIE, SUB_CATEGORIE]
 tags: [TAG]     # TAG names should always be lowercase
 ---
